2nd training/Community/Community/Community1/force-app/main/default/objects/Master_Checklist_Item__c/Master_Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Master Checklist Item</label>
    <nameField>
        <displayFormat>MCI-{0000}</displayFormat>
        <label>Master Checklist Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>