2nd training/Community/Community/Community1/force-app/main/default/objects/Master_Checklist_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VISITOR ENTRANCE AREA / LOADING AREA</fullName>
            </value>
            <value>
                <fullName>INTERIOR AREA</fullName>
            </value>
            <value>
                <fullName>RECEPTION AREA / VIEWING ROOMS</fullName>
            </value>
            <value>
                <fullName>TRANSIT AREA</fullName>
            </value>
            <value>
                <fullName>RECEIVING/ RELEASING AREA</fullName>
            </value>
            <value>
                <fullName>VISUAL CHECK AREA（AREA DESIGNATED FOR THE DAY)</fullName>
            </value>
            <value>
                <fullName>TOOL AREA</fullName>
            </value>
            <value>
                <fullName>EQUIPMENT AREA</fullName>
            </value>
            <value>
                <fullName>MATERIAL AREA</fullName>
            </value>
            <value>
                <fullName>CARTON WORKSHOP AREA</fullName>
            </value>
            <value>
                <fullName>STORAGE AREA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>