2nd training/Community/Community/Community1/force-app/main/default/objects/Master_Checklist_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>