2nd training/Community/Community/Community1/force-app/main/default/objects/Master_Checklist_Item__c/fields/Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Sequence_No__c</fullName>
    <externalId>true</externalId>
    <label>Sequence No</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>