2nd training/Community/Community/Community1/force-app/main/default/objects/Master_Checklist_Item__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <label>Warehouse Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Warehouse_Location</valueSetName>
    </valueSet>
</CustomField>