2nd training/Community/Community/Community1/force-app/main/default/objects/Master_Checklist_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Header__c</columns>
    <columns>Category__c</columns>
    <columns>IsActive__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Sequence_No__c</columns>
    <columns>Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>